Add gitlab's node exporter

--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -65,6 +65,10 @@ prometheus_scrape_configs:
         labels:
           instance: "{{ hostvars['pg01'].inventory_hostname }}"
 
+      - targets: ["{{ hostvars['gitlab01'].ansible_host }}:{{ hostvars['gitlab01'].node_exporter_port }}"]
+        labels:
+          instance: "{{ hostvars['gitlab01'].inventory_hostname }}"
+
       - targets: ["{{ hostvars['drepi'].ansible_host }}:{{ hostvars['drepi'].node_exporter_port }}"]
         labels:
           instance: "{{ drepi_label }}"
