--- a/group_vars/gitlab/vars.yml
+++ b/group_vars/gitlab/vars.yml
@@ -3,6 +3,9 @@
 ansible_user: root
 ansible_python_interpreter: /usr/bin/python3
 
+node_exporter_web_listen_address: '0.0.0.0:9100'
+node_exporter_port: "{{ node_exporter_web_listen_address.split(':')[1] }}"
+
 gitlab_config_template: "{{ inventory_dir }}/files/gitlab/gitlab.rb.j2"
 
 domain: "{{ hostvars['webgw01'].domain }}"
