--- a/group_vars/pg/config.yml
+++ b/group_vars/pg/config.yml
@@ -4,4 +4,7 @@
 postgresql_hba_entries:
   - { type: local, database: all, user: postgres, auth_method: peer }
   - { type: host, database: all, user: all, address: "{{ hostvars.dresrv.ansible_host }}/32", auth_method: "md5" }
+  - { type: host, database: all, user: all, address: "{{ hostvars['desktop'].ansible_host }}/32", auth_method: "md5" }
+  - { type: host, database: all, user: all, address: "{{ hostvars['laptop'].ansible_host }}/32", auth_method: "md5" }
+  - { type: host, database: all, user: all, address: "{{ hostvars['laptop'].wireguard_ip }}/32", auth_method: "md5" }
   - { type: host, database: all, user: all, address: "{{ home_net.vm.cidr }}", auth_method: "md5" }
