--- a/roles/ddcutil/tasks/main.yml
+++ b/roles/ddcutil/tasks/main.yml
@@ -17,14 +17,11 @@
   notify: load i2c-dev
 
 - name: Allow wheel to control monitors
-  become: true
-  copy:
-    dest: "/etc/udev/rules.d/45-ddcutil-i2c.rules"
-    owner: root
-    group: root
-    mode: 0644
-    content: |
-      KERNEL=="i2c-[0-9]*", GROUP="wheel", MODE="0660", PROGRAM="/usr/bin/ddcutil --bus=%n getvcp 0x10"
-  notify:
-    - reload udev
-    - trigger udev
+  include_role:
+    name: udev
+    apply:
+      become: true
+      tags: ["udev"]
+  vars:
+    udev_rules:
+      45-ddcutil-i2c: "{{ ddcutil_udev_rule }}"
