--- a/playbooks/webgw.yml
+++ b/playbooks/webgw.yml
@@ -138,6 +138,14 @@
       tags: ["firewalld"]
       when: ansible_os_family == 'RedHat'
 
+    - role: unattended-upgrades
+      when: ansible_os_family == 'Debian'
+      tags: ["unattended-upgrades"]
+
+    - role: dnf_automatic
+      when: ansible_os_family == 'RedHat'
+      tags: ["dnf_automatic"]
+
   handlers:
     - name: reload firewalld
       service:
