--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -142,6 +142,9 @@
     - role: systemd
       tags: ["systemd"]
 
+    - role: dnf_automatic
+      tags: ["dnf_automatic"]
+
   post_tasks:
     - name: Install RPM requirements
       dnf:
