--- a/playbooks/prom.yml
+++ b/playbooks/prom.yml
@@ -85,6 +85,9 @@
     - role: grafana
       tags: ["grafana"]
 
+    - role: dnf_automatic
+      tags: ["dnf_automatic"]
+
   handlers:
     - name: reload firewalld
       service:
