--- a/host_vars/dresrv/dnf_automatic.yml
+++ b/host_vars/dresrv/dnf_automatic.yml
@@ -4,7 +4,7 @@ dnf_automatic_timer_enabled: true
 dnf_automatic_upgrade_type: "default"
 dnf_automatic_apply_updates: true
 dnf_automatic_download_updates: true
-dnf_automatic_email_enabled: true
+dnf_automatic_email_enabled: false
 dnf_automatic_email_from: "dnf@{{ domain }}"
 dnf_automatic_email_to: "{{ my_email }}"
 dnf_automatic_excludes:
