--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,6 +4,7 @@ inventory = hosts
 filter_plugins = filter_plugins
 vault_password_file = .secrets/vault_key
 library = ./library
+host_key_checking = False
 
 [inventory]
 enable_plugins = vmware_vm_inventory,ini
