--- a/playbooks/auto-update.yml
+++ b/playbooks/auto-update.yml
@@ -8,6 +8,6 @@
       when: ansible_os_family == 'Debian'
       tags: ["unattended-upgrades"]
 
-    - role: dnf_automatic
+    - role: cosandr.dnf_automatic
       when: ansible_os_family == 'RedHat'
       tags: ["dnf_automatic"]
