--- a/playbooks/gitlab.yml
+++ b/playbooks/gitlab.yml
@@ -71,7 +71,7 @@
     - role: geerlingguy.gitlab
       tags: ["gitlab"]
 
-    - role: dnf_automatic
+    - role: cosandr.dnf_automatic
       tags: ["dnf_automatic"]
 
   handlers:
