--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -142,7 +142,7 @@
     - role: systemd
       tags: ["systemd"]
 
-    - role: dnf_automatic
+    - role: cosandr.dnf_automatic
       tags: ["dnf_automatic"]
 
   post_tasks:
