--- a/requirements.yml
+++ b/requirements.yml
@@ -1,10 +1,13 @@
-#!/usr/bin/env -S ansible-galaxy collection install -r
+#!/usr/bin/env -S ansible-galaxy install -r
 ---
 collections:
   - ansible.posix
   - community.general
 
 roles:
+  - name: cosandr.dnf_automatic
+    src: https://github.com/cosandr/ansible-role-dnf-automatic.git
+    scm: git
   - geerlingguy.docker
   - geerlingguy.postgresql
   - geerlingguy.gitlab
