--- a/group_vars/servers/auto-update.yml
+++ b/group_vars/servers/auto-update.yml
@@ -1,9 +1,12 @@
 ---
 
 dnf_automatic_timer_enabled: true
-dnf_automatic_upgrade_type: "security"
+dnf_automatic_upgrade_type: "default"
 dnf_automatic_apply_updates: true
 dnf_automatic_download_updates: true
+dnf_automatic_excludes:
+  - "kernel*"
+  - "systemd*"
 
 unattended_remove_unused_dependencies: true
 unattended_remove_new_unused_dependencies: true
