Move SLB aquaero to a Windows VM

--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -88,7 +88,7 @@ prometheus_scrape_configs:
   - job_name: "aquaero"
     scrape_interval: 30s
     static_configs:
-      - targets: ["{{ hostvars['prom01'].ansible_host }}:{{ hostvars['prom01'].aquaero_exporter_port }}"]
+      - targets: ["{{ hostvars['win-aquaero'].ansible_host }}:{{ hostvars['win-aquaero'].aquaero_exporter_port }}"]
         labels:
           instance: "SLB"
       - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].aquaero_exporter_port }}"]
@@ -114,6 +114,10 @@ prometheus_scrape_configs:
       - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].wmi_exporter_port }}"]
         labels:
           instance: "{{ desktop_label }}"
+
+      - targets: ["{{ hostvars['win-aquaero'].ansible_host }}:{{ hostvars['win-aquaero'].wmi_exporter_port }}"]
+        labels:
+          instance: "{{ hostvars['win-aquaero'].inventory_hostname }}"
 
   - job_name: "hwinfo"
     static_configs:
