--- a/group_vars/gui/vars.yml
+++ b/group_vars/gui/vars.yml
@@ -4,87 +4,7 @@ systemd_user: "{{ my_user | default('andrei') }}"
 systemd_user_conf: "/home/{{ systemd_user }}/.config/systemd/user"
 systemd_user_override: "/home/{{ systemd_user }}/.config/override"
 
-pacman_packages:
-  - alacritty
-  - alsa-utils  # amixer
-  - arandr
-  - chromium
-  - docker
-  - docker-compose
-  - dunst
-  - evince
-  - feh
-  - file-roller
-  - firefox
-  - firewalld
-  - fzf
-  - gnome-calculator
-  - gnome-keyring
-  - gnome-themes-extra
-  - gnu-netcat
-  - go
-  - google-chrome
-  - gvfs-mtp
-  - i3-gaps
-  - iotop
-  - iproute2
-  - jq
-  - kitty
-  - libpulse  # pactl
-  - lm_sensors
-  - lxappearance
-  - ncdu
-  - net-tools  # route
-  - nextcloud-client
-  - noto-fonts-emoji
-  - ntfs-3g
-  - numlockx
-  - p7zip
-  - pacutils
-  - pamixer
-  - pavucontrol
-  - perl-anyevent-i3
-  - picom
-  - pipewire-alsa
-  - pipewire-pulse
-  - playerctl
-  - polybar
-  - procps-ng  # pgrep
-  - pyenv
-  - python-aiohttp
-  - python-websockets
-  - qt5ct
-  - redshift
-  - reflector
-  - remmina
-  - rofi
-  - scrot
-  - seahorse
-  - spotify
-  - sshfs
-  - thunar
-  - thunar-archive-plugin
-  - tmux
-  - ttf-fira-code
-  - ttf-font-awesome
-  - ttf-font-awesome-4
-  - ttf-nerd-fonts-symbols
-  - xclip
-  - xorg-xrandr
-  - xorg-xset
+ddcutil_udev_rule: |
+  KERNEL=="i2c-[0-9]*", GROUP="wheel", MODE="0660"
 
-aur_packages:
-  - adwaita-qt
-  - discord_arch_electron
-  - i3lock-color
-  - i3lock-fancy-rapid-git
-  - jetbrains-toolbox  # goland, pycharm
-  - kernel-modules-hook
-  - pyenv-virtualenv
-  - shellcheck-bin
-  - slack-desktop
-  - sublime-text-4
-  - tmuxinator
-  - ttf-font-awesome-4
-  - visual-studio-code-bin
-  - xidlehook
+
