--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -60,6 +60,16 @@ prometheus_scrape_configs:
         labels:
           instance: "{{ drepi_label }}"
 
+      - targets: ["10.0.50.53:80"]
+        labels:
+          instance: "dht03"
+          room: "Living Room"
+
+      - targets: ["10.0.50.54:80"]
+        labels:
+          instance: "dht04"
+          room: "Bedroom"
+
   - job_name: "node"
     static_configs:
       - targets: ["localhost:{{ node_exporter_port }}"]
