--- a/host_vars/romsto/wireguard.yml
+++ b/host_vars/romsto/wireguard.yml
@@ -16,5 +16,5 @@ wireguard_postdown:
 wireguard_unmanaged_peers:
   mt:
     endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
-    allowed_ips: "{{ hostvars['dresrv'].ansible_host }}/32"
+    allowed_ips: "10.4.20.1/32, {{ hostvars['prom01'].ansible_host }}/32, {{ hostvars['dresrv'].ansible_host }}/32"
     public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
