Remove hard prometheus dependency from exporters

--- a/roles/cadvisor/defaults/main.yml
+++ b/roles/cadvisor/defaults/main.yml
@@ -5,3 +5,5 @@ cadvisor_skip_install: false
 cadvisor_docker_only: true
 cadvisor_listen_ip: 127.0.0.1
 cadvisor_port: 8081
+
+cadvisor_required_services: ["docker.service"]
