--- a/roles/node_exporter/defaults/main.yml
+++ b/roles/node_exporter/defaults/main.yml
@@ -10,3 +10,5 @@ node_exporter_collectors: []
 node_exporter_no_collectors: []
 
 node_exporter_web_listen_address: "0.0.0.0:9100"
+
+node_exporter_required_services: []
