--- a/roles/nginx_exporter/defaults/main.yml
+++ b/roles/nginx_exporter/defaults/main.yml
@@ -1,10 +1,14 @@
 ---
-nginx_exporter_version: 0.6.0
+nginx_exporter_version: 0.10.0
 
 nginx_exporter_no_sysusers: false
 nginx_exporter_skip_install: false
 nginx_exporter_required_services: ["nginx.service"]
 
-nginx_exporter_web_listen_address: "0.0.0.0:9113"
-nginx_exporter_scrape_uri: "http://127.0.0.1:8080/stub_status"
+nginx_exporter_install_conf: true
+nginx_exporter_scrape_location: "stub_status"
+nginx_vhost_path: /etc/nginx/conf.d
+
+nginx_exporter_web_listen_address: "0.0.0.0:{{ nginx_exporter_port | default('9113') }}"
+nginx_exporter_scrape_uri: "http://127.0.0.1:80/{{ nginx_exporter_scrape_location }}"
 nginx_exporter_ssl_verify: "true"
