--- a/roles/nginx_exporter/handlers/main.yml
+++ b/roles/nginx_exporter/handlers/main.yml
@@ -1,4 +1,11 @@
 ---
+
+- name: reload nginx
+  become: true
+  systemd:
+    name: nginx
+    state: reloaded
+
 - name: restart nginx_exporter
   become: true
   systemd:
