--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -25,24 +25,6 @@
   vars:
     postgres_exporter_version: "latest"
   pre_tasks:
-    - name: Setup data disk
-      include_role:
-        name: setup_disk
-        apply:
-          tags: ["disk"]
-      vars:
-        disk:
-          dev: "/dev/sdb"
-          vols:
-            - name: pgsql
-              path: "/var/lib/pgsql"
-              shrink: false
-              size: "100%FREE"
-              owner: "26"  # postgres
-              group: "26"
-              mode: "0700"
-      tags: ["disk"]
-
     - name: Mount NFS share
       mount:
         src: "{{ home_net.vm.cidr | ipaddr('2') | ipaddr('address') }}:/mnt/tank/backup/pgsql"
@@ -128,6 +110,9 @@
       tags: ["firewalld"]
 
   roles:
+    - role: setup_disks
+      tags: ["disk"]
+
     - role: geerlingguy.postgresql
       tags: ["pg"]
 
