--- a/roles/setup_disks/tasks/main.yml
+++ b/roles/setup_disks/tasks/main.yml
@@ -2,8 +2,14 @@
 
 - name: Setup raw disk
   include_tasks: "raw.yml"
+  loop: "{{ provisioned_disks }}"
+  loop_control:
+    loop_var: disk
   when: disk.vols is not defined
 
 - name: Setup disk with LVM
   include_tasks: "lvm.yml"
+  loop: "{{ provisioned_disks }}"
+  loop_control:
+    loop_var: disk
   when: disk.vols is defined
