--- a/playbooks/webgw.yml
+++ b/playbooks/webgw.yml
@@ -47,6 +47,30 @@
         group: root
       tags: ["nginx"]
 
+    - name: Install nginx repo
+      copy:
+        dest: /etc/yum.repos.d/nginx.repo
+        content: |
+          [nginx-stable]
+          name=nginx stable repo
+          baseurl=http://nginx.org/packages/centos/$releasever/$basearch/
+          gpgcheck=1
+          enabled=1
+          gpgkey=https://nginx.org/keys/nginx_signing.key
+          module_hotfixes=true
+
+          [nginx-mainline]
+          name=nginx mainline repo
+          baseurl=http://nginx.org/packages/mainline/centos/$releasever/$basearch/
+          gpgcheck=1
+          enabled=0
+          gpgkey=https://nginx.org/keys/nginx_signing.key
+          module_hotfixes=true
+        owner: root
+        group: root
+        mode: 0644
+      tags: ["nginx"]
+
     - name: Allow nginx proxy
       seboolean:
         name: httpd_can_network_connect
