Move proxy_hosts var to servers group

--- a/group_vars/servers/vars.yml
+++ b/group_vars/servers/vars.yml
@@ -1,5 +1,9 @@
 ---
 
+proxy_hosts:
+  - "{{ hostvars['webgw01'].wireguard_ip }}"
+  - "{{ hostvars['localgw01'].ansible_host }}"
+
 smtp_config: "{{ vault_smtp_config }}"
 # smtp_config:
 #   example.com:
