Initial standalone nextcloud add

--- a/group_vars/webgw/nginx/upstreams.yml
+++ b/group_vars/webgw/nginx/upstreams.yml
@@ -12,3 +12,7 @@ nginx_upstreams:
   - name: grafana
     servers: ["{{ hostvars['prom01'].ansible_host }}:{{ hostvars['prom01'].grafana_port }}"]
     keepalive: 16
+
+  - name: nextcloud
+    servers: ["{{ hostvars['nextcloud01'].ansible_host }}:{{ hostvars['nextcloud01'].nextcloud_port }}"]
+    keepalive: 16
