--- a/group_vars/webgw/nginx/main.yml
+++ b/group_vars/webgw/nginx/main.yml
@@ -26,6 +26,11 @@ nginx_extra_http_options: |
   # HSTS (ngx_http_headers_module is required) (63072000 seconds)
   add_header Strict-Transport-Security "max-age=63072000" always;
 
+  map $http_upgrade $connection_upgrade {
+      default upgrade;
+      ''      close;
+  }
+
 
 nginx_remove_default_vhost: true
 nginx_server_tokens: "off"
