Associate yml with ansible

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "**/*.yml": "yaml"
+        "**/*.yml": "ansible"
     },
     "python.pythonPath": "/usr/bin/python3",
     "ansibleVaultInline.encryptVaultId": ""
