Ignore dnf-makecache from alerts

--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -204,7 +204,7 @@ prometheus_alert_rules:
     annotations:
       summary: '{% raw %}{{ $labels.name }} container dead{% endraw %}'
   - alert: HostSystemdServiceCrashed
-    expr: node_systemd_unit_state{state="failed"} == 1
+    expr: node_systemd_unit_state{state="failed", name!="dnf-makecache.service"} == 1
     for: 5m
     labels:
       severity: warning
