--- a/roles/borg/tasks/install.yml
+++ b/roles/borg/tasks/install.yml
@@ -2,66 +2,22 @@
 - name: Include OS-specific variables.
   include_vars: "{{ ansible_os_family }}.yml"
 
+- block:
+    - name: Install epel
+      dnf:
+        name: epel-release
+        state: present
+
+    - name: Enable epel and powertools
+      command: dnf config-manager --set-enabled epel,powertools
+      changed_when: false
+
+  when:
+    - ansible_distribution != 'Fedora'
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version | int >= 8
+
 - name: Install borg
   package:
     name: "{{ borg_package_name }}"
     state: present
-
-- block:
-  - name: Create "{{ borg_group }}" group
-    group:
-      name: "{{ borg_group }}"
-      state: present
-
-  - name: Create "{{ borg_user }}" group
-    user:
-      name: "{{ borg_user }}"
-      shell: /bin/bash
-      home: "{{ borg_home }}"
-      createhome: "{{ borg_create_home }}"
-      group: "{{ borg_group }}"
-      state: present
-
-  - name: Set "{{ borg_home }}" permissions
-    file:
-      path: "{{ borg_home }}"
-      owner: "{{ borg_user }}"
-      group: "{{ borg_group }}"
-      mode: 0700
-      state: directory
-
-  - name: Create borg .ssh directory
-    file:
-      path: "{{ borg_home }}/.ssh"
-      owner: "{{ borg_user }}"
-      group: "{{ borg_group }}"
-      mode: 0700
-      state: directory
-    
-  - block:
-    - name: Get SELinux context
-      shell: semanage fcontext -l | grep -c '{{ borg_home }}/.ssh(.*)?'
-      check_mode: false
-      ignore_errors: true
-      register: __fcontext
-
-    - name: Set SELinux context
-      command: semanage fcontext -a -t ssh_home_t '{{ borg_home }}/.ssh(.*)?'
-      when:
-        - __fcontext is defined
-        - __fcontext == 0
-
-    - name: Restore SELinux context
-      command: restorecon -r "{{ borg_home }}/.ssh"
-
-    when: ansible_selinux.status == "enabled"
-
-  - name: Create pool directory
-    file:
-      path: "{{ borg_pool }}"
-      owner: "{{ borg_user }}"
-      group: "{{ borg_group }}"
-      mode: 0700
-      state: directory
-
-  when: borg_server
