--- a/roles/sbctl/defaults/main.yml
+++ b/roles/sbctl/defaults/main.yml
@@ -5,6 +5,7 @@ boot_mount: "{{ esp_mount }}"
 sbctl_ucode: "intel-ucode.img"
 sbctl_cmdline: "/usr/share/secureboot/cmdline"
 sbctl_enroll: true
+sbctl_enroll_microsoft: false
 efistub_splash: "/usr/share/systemd/bootctl/splash-arch.bmp"
 
 kernels:
