--- a/roles/sbctl/tasks/main.yml
+++ b/roles/sbctl/tasks/main.yml
@@ -24,12 +24,12 @@
 
 - name: Enroll keys
   become: true
-  command: "sbctl enroll-keys"
+  command: "sbctl enroll-keys {% if sbctl_enroll_microsoft %}--microsoft{% endif %}"
   args:
     # https://github.com/Foxboron/sbctl/blob/32ac2678342aab8233ee887ea73cc781e907f86a/util.go#L73
     creates: "/sys/firmware/efi/efivars/db-d719b2cb-3d3a-4596-a3bc-dad00e67656f"
   notify: reboot
-  when: sbctl_enroll
+  when: sbctl_enroll | bool
   tags: ["enroll"]
 
 - name: Ensure {{ esp_mount }}/EFI/Linux exists
