Implement sbctl_sign_files

--- a/roles/sbctl/defaults/main.yml
+++ b/roles/sbctl/defaults/main.yml
@@ -6,6 +6,7 @@ sbctl_ucode: "intel-ucode.img"
 sbctl_cmdline: "/usr/share/secureboot/cmdline"
 sbctl_enroll: true
 sbctl_enroll_microsoft: false
+sbctl_sign_files: []
 efistub_splash: "/usr/share/systemd/bootctl/splash-arch.bmp"
 
 kernels:
